# nous_lang

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
assets/brand/: render_icons.py  render_social_card.py  render_wordmark.py
benchmarks/: .gitignore  README.md  arraysum.c  csvsum.c  fib.c  fib.lby  gcdbench.c  loop_10000000.lby  loop_1000000000.lby  loop_60000.lby  loopsum.c  loopsum.lby  run_arraysum.ps1  run_bench.ps1  run_csvsum.ps1  run_gcd.ps1  run_loop.ps1  run_strscan.ps1  strscan.c
benchmarks/crosslang/: LULLABY_CHEATSHEET.md  SPEC.md  assemble_report.py  compile_data.json  corpus_data.json  gen_perf_driver.py  perf_data.json  report_template.html  run_corpus_perf.ps1  run_perf.ps1  tokens.py
benchmarks/crosslang/c/: bench_primes.c  scalar.c
benchmarks/crosslang/cpp/: bench_primes.cpp  scalar.cpp
benchmarks/crosslang/lullaby/: bench_primes.lby  scalar.lby
benchmarks/crosslang/python/: bench_primes.py  scalar.py
benchmarks/crosslang/rust/: bench_primes.rs  scalar.rs
crates/lullaby_cli/: Cargo.toml
crates/lullaby_cli/src/: args.rs  compile.rs  diagnostics.rs  help.rs  loader.rs  main.rs
crates/lullaby_cli/src/commands/: build.rs  fmt.rs  inspect.rs  mod.rs  native.rs  native_link.rs  project.rs  run.rs  test.rs  test_isolate.rs  wasm.rs
crates/lullaby_cli/tests/: cli.rs
crates/lullaby_cli/tests/cli/: closure_conditional.rs  ffi_callbacks.rs  fmt_comments.rs  fuzz.rs  fuzz_alloc.rs  fuzz_arena.rs  fuzz_closure.rs  fuzz_oob.rs  fuzz_recursion.rs  returned_closure.rs  suite1.rs  suite10.rs  suite12.rs  suite13.rs  suite14.rs  suite15.rs  suite16.rs  suite17.rs  suite18.rs  suite19.rs  suite2.rs  suite20.rs  suite21.rs  suite23.rs  suite24.rs  suite25.rs  suite26.rs  suite3.rs  suite4.rs  suite5.rs  suite7.rs  suite8.rs  suite9.rs
crates/lullaby_diagnostics/: Cargo.toml
crates/lullaby_diagnostics/src/: lib.rs
crates/lullaby_ir/: Cargo.toml
crates/lullaby_ir/src/: aarch64.rs  bytecode_vm.rs  elf_object.rs  frame_layout.rs  ir_env.rs  ir_interpreter.rs  ir_interpreter_builtins.rs  ir_lib_tests.rs  ir_optimizer.rs  ir_optimizer_constfold.rs  ir_optimizer_copyprop.rs  ir_optimizer_cse.rs  ir_optimizer_dce.rs  ir_optimizer_inline.rs  ir_optimizer_licm.rs  lib.rs  macho_object.rs  native_contract.rs  native_object.rs  native_object_callargs.rs  native_object_closure.rs  native_object_closure_ctx.rs  native_object_coff.rs  native_object_coff_tests.rs  native_object_confine.rs  native_object_dwarf.rs  native_object_dwarf_tests.rs  native_object_eligibility.rs  native_object_expr.rs  native_object_frame.rs  native_object_heap_class.rs  native_object_heapbox.rs  native_object_heapbox_tests.rs  native_object_layout.rs  native_object_loops.rs  native_object_lowering.rs  native_object_match.rs  native_object_method.rs  native_object_place.rs  native_object_portio.rs  (+27 more)
crates/lullaby_ir/tests/: memory_snapshots.rs  native_contract_snapshots.rs  native_object_snapshots.rs
crates/lullaby_ir/tests/snapshots/: alpha1_native_backend_contract.json  assignments.coff.json  locals_add.coff.json  native_backend_contract.json  return_42.coff.json  run_array.memory.json  run_store.memory.json
crates/lullaby_lexer/: Cargo.toml
crates/lullaby_lexer/src/: lib.rs
crates/lullaby_loader/src/: loader.rs  manifest.rs
crates/lullaby_lsp/: Cargo.toml
crates/lullaby_lsp/src/: analysis.rs  completion.rs  diagnostics.rs  lib.rs  project.rs
crates/lullaby_parser/: Cargo.toml
crates/lullaby_runtime/: Cargo.toml
crates/lullaby_runtime/src/: interp_stack.rs  interpreter.rs  lib.rs  raw_pointer.rs  runtime_actor.rs  runtime_builtins.rs  runtime_env.rs  runtime_error.rs  runtime_eval.rs  runtime_int.rs  runtime_tests.rs
crates/lullaby_semantics/: Cargo.toml
crates/lullaby_wasm/: Cargo.toml
crates/lullaby_wasm/src/: lib.rs
crates/nous_cli/: Cargo.toml
crates/nous_cli/src/: main.rs
crates/nous_cli/tests/: cli.rs
crates/nous_ir/: Cargo.toml
crates/nous_ir/src/: lib.rs
documents/: acceptance_criteria.md  alpha1_acceptance_criteria.md  alpha1_language_surface.md  alpha1_release_notes.md  atomics_design.md  brand_guidelines.md  closures_capture_design.md  concurrency_design.md  concurrency_model_design.md  concurrency_semantics.md  contributor_guide.md  core_language_rules.md  diagnostic_registry.md  distribution_design.md  dogfood_1_0_gap_audit.md  error_propagation_design.md  execution_tiers_and_1_0_scope.md  ffi_design.md  finish_line_plan.md  formal_grammar.md  freestanding_tier_design.md  generics_design.md  implementation_plan.md  language_specification.md  language_surface.md  large_file_split_plan.md  linker_and_binary_output_plan.md  lsp_design.md  lullaby_compilation_architecture.md  lullaby_control_structures.md  lullaby_error_handling.md  lullaby_input_output.md  lullaby_memory_management.md  lullaby_syntax_design.md  lullaby_type_system.md  memory_model_decision.md  modules_design.md  name_research.md  native_backend_contract.md  native_optimizer_roadmap.md  (+27 more)
examples/: README.md
examples/dogfood/: 01_expr_parser.lby  02_service_core.lby  03_cli_wordfreq.lby  04_pipeline.lby  05_game_loop.lby  06_freestanding_probe.lby  06b_unsafe_probe.lby
examples/invalid/: brace_block.lby  break_outside_loop.lby  index_non_array.lby  missing_indented_body.lby  non_exhaustive_match.lby  type_mismatch.lby  unknown_function.lby  wrong_argument_count.lby
examples/valid/: arrays_control_flow.lby  bits.lby  calculator.lby  error_recovery.lby  file_io_demo.lby  permissions.lby  random_bytes.lby  rotation.lby  stopwatch.lby  system_command_status.lby  tokenize.lby
installer/: lullaby.wxs  notice.rtf  render_installer_art.py
offline_docs/: generate_offline_docs.py  index.html  verify_offline_docs.py
scripts/: build_windows_installer.py  install_unix_path.sh  package_portable.py  package_windows_portable.ps1  publish_github_release.ps1  uninstall_unix_path.sh  verify_markdown_refs.ps1  verify_release.ps1
web/: README.md  install.ps1  install.sh
(+342 files in other folders)
