[workspace]
resolver = "3"
members = [
    "crates/lullaby_cli",
    "crates/lullaby_diagnostics",
    "crates/lullaby_ir",
    "crates/lullaby_lexer",
    "crates/lullaby_lsp",
    "crates/lullaby_parser",
    "crates/lullaby_runtime",
    "crates/lullaby_semantics",
]
# Built standalone for wasm via wasm-pack (browser playground); kept out of the
# native workspace gate so `cargo test --all` doesn't build wasm-bindgen.
exclude = ["crates/lullaby_wasm"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/emilfilipov/lullaby"
