[workspace]
resolver = "3"
members = [
    "crates/lullaby_cli",
    "crates/lullaby_diagnostics",
    "crates/lullaby_ir",
    "crates/lullaby_lexer",
    "crates/lullaby_lsp",
    "crates/lullaby_parser",
    "crates/lullaby_runtime",
    "crates/lullaby_semantics",
]
# Built standalone for wasm via wasm-pack (browser playground); kept out of the
# native workspace gate so `cargo test --all` doesn't build wasm-bindgen.
exclude = ["crates/lullaby_wasm"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/emilfilipov/lullaby"

# Release builds power the shipped toolchain and the interpreter backends that
# run user programs, so optimize the produced binary hard: whole-program (fat)
# LTO and a single codegen unit let the optimizer inline across crate
# boundaries (lexer/parser/semantics/runtime are separate crates on every hot
# path), and `panic = "abort"` drops the unwinding machinery. No code uses
# `catch_unwind` and there are no `#[should_panic]` tests, so aborting on an
# internal panic is safe.
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
