[package]
name = "lullaby_cli"
version = "0.1.0-alpha.2"
edition = "2024"
license.workspace = true

[[bin]]
name = "lullaby"
path = "src/main.rs"

[dependencies]
lullaby_diagnostics = { path = "../lullaby_diagnostics" }
lullaby_ir = { path = "../lullaby_ir" }
lullaby_lexer = { path = "../lullaby_lexer" }
lullaby_lsp = { path = "../lullaby_lsp" }
lullaby_parser = { path = "../lullaby_parser" }
lullaby_runtime = { path = "../lullaby_runtime" }
lullaby_semantics = { path = "../lullaby_semantics" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
