[package]
name = "lullaby_ir"
version = "0.1.0-alpha.2"
edition = "2024"

[dependencies]
getrandom = "0.4"
lullaby_diagnostics = { path = "../lullaby_diagnostics" }
lullaby_parser = { path = "../lullaby_parser" }
lullaby_runtime = { path = "../lullaby_runtime" }
lullaby_semantics = { path = "../lullaby_semantics" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
lullaby_lexer = { path = "../lullaby_lexer" }
