[package]
name = "lullaby_ir"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
getrandom = "0.4"
lullaby_diagnostics = { path = "../lullaby_diagnostics" }
lullaby_parser = { path = "../lullaby_parser" }
lullaby_runtime = { path = "../lullaby_runtime" }
lullaby_semantics = { path = "../lullaby_semantics" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
gimli = { version = "0.33", default-features = false, features = ["read", "std"] }
lullaby_lexer = { path = "../lullaby_lexer" }
object = { version = "0.39", default-features = false, features = ["read", "std"] }
