[package]
name = "lullaby_runtime"
version = "0.1.0-alpha.2"
edition = "2024"

[dependencies]
getrandom = "0.4"
lullaby_diagnostics = { path = "../lullaby_diagnostics" }
lullaby_parser = { path = "../lullaby_parser" }

[dev-dependencies]
lullaby_lexer = { path = "../lullaby_lexer" }
lullaby_semantics = { path = "../lullaby_semantics" }
