[package]
name = "lullaby_runtime"
version = "0.1.0-alpha.2"
edition = "2024"
license.workspace = true

[dependencies]
getrandom = "0.4"
lullaby_diagnostics = { path = "../lullaby_diagnostics" }
lullaby_parser = { path = "../lullaby_parser" }

# In a wasm build the browser playground supplies randomness via the JS crypto
# backend (needs the build flag --cfg getrandom_backend="wasm_js").
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
lullaby_lexer = { path = "../lullaby_lexer" }
lullaby_semantics = { path = "../lullaby_semantics" }
